tests/machine/x/ocaml/group_by_left_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_left_join.ml", line 36, characters 35-42:
36 | let customers = [[("id",1);("name","Alice")];[("id",2);("name","Bob")];[("id",3);("name","Charlie")]]
                                        ^^^^^^^
Error: This expression has type string but an expression was expected of type
         int


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let customers = [[("id",1);("name","Alice")];[("id",2);("name","Bob")];[("id",3);("name","Charlie")]]
  37 | let orders = [[("id",100);("customerId",1)];[("id",101);("customerId",1)];[("id",102);("customerId",2)]]
  38 | let stats = (let __res0 = ref [] in
